<resources>
    <!-- Strings used for fragments for navigation -->
    <string name="headlines">Headlines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello headlines fragment</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Health">Health</string>
    <string name="Science">Science</string>
    <string name="Sport">Sport</string>
    <string name="Technology">Technology</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="news">New</string>
    <string name="relevant">Relevant</string>
    <string name="date">Date</string>
    <string name="choose_date">Choose date</string>
    <string name="language">Language</string>
    <string name="Russian">Русский</string>
    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="filter">Filter</string>

</resources>