<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:focusable="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarFilter"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/ic_launcher_background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ic_launcher_background"
            app:menu="@menu/filter_toolbar"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/filter"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarTextStyle"
            app:titleTextColor="@color/light_text" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/popular"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/chip_selector"
                android:drawableStart="@drawable/icon_checked"
                android:gravity="center"
                android:text="@string/popular" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/news"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/chip_selector"
                android:drawableStart="@drawable/icon_checked"
                android:gravity="center"
                android:text="@string/news" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/relevant"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/chip_selector"
                android:drawableStart="@drawable/icon_checked"
                android:gravity="center"
                android:text="@string/relevant" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/tvLabelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
            android:textColor="@color/dark_text"
            app:layout_constraintBottom_toBottomOf="@+id/calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggleButton" />

        <TextView
            android:id="@+id/tvSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_date"
            android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
            android:textColor="@color/color_choose_date"
            app:layout_constraintBottom_toBottomOf="@+id/calendar"
            app:layout_constraintEnd_toStartOf="@id/calendar"
            app:layout_constraintTop_toBottomOf="@id/toggleButton" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:icon="@drawable/ic_no_selected1"
            app:iconTint="@color/on_surface_variant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggleButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendar">

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/language"
                android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                android:textColor="@color/dark_text"
                app:layout_constraintBottom_toBottomOf="@+id/calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggleButton" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipRussian"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/Russian"
                    app:chipBackgroundColor="@color/chip_selector" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipEnglish"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/english"
                    app:chipBackgroundColor="@color/chip_selector" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDeutsch"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/deutsch"
                    app:chipBackgroundColor="@color/chip_selector" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>